[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/greyredanimated.tres" type="Material" id=1]
[ext_resource path="res://PollinatorEgg.gd" type="Script" id=2]
[ext_resource path="res://Textures/eggtransparent.tres" type="Material" id=3]

[sub_resource type="SphereShape" id=1]
radius = 0.2

[node name="PollinatorEgg" type="KinematicBody" groups=["Destructible"]]
script = ExtResource( 2 )

[node name="white" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 0.7, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.11
material = ExtResource( 3 )

[node name="yolk" type="CSGSphere" parent="."]
radius = 0.06
material = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.4, 0, 0, 0, 1, 0, 0.0459709, 0 )
shape = SubResource( 1 )

[node name="HatchTime" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="HatchPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.329117, 0 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="HatchTime" to="." method="_on_HatchTime_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
